Quartz sync: Mar 4, 2025, 4:12 PM